--- a/app/assets/stylesheets/rails_observatory/application.css
+++ b/app/assets/stylesheets/rails_observatory/application.css
@@ -29,6 +29,8 @@
 @import url('components/summary_panel.css');
 @import url('components/logs.css');
 @import url('components/resize_handle.css');
+@import url('components/search_bar.css');
+@import url('components/status_badge.css');
 
 /* Mixins */
 @import url('mixins/nav_button.css');
