--- a/app/assets/stylesheets/rails_observatory/components/card.css
+++ b/app/assets/stylesheets/rails_observatory/components/card.css
@@ -1,13 +1,13 @@
 @layer components {
   .card {
-    border-radius: 0.5rem;
+    border-radius: var(--radius-sm);
     background-color: var(--surface-card);
-    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-    border: 1px solid var(--divider);
+    box-shadow: var(--shadow-sm);
+    border: var(--border-divider);
     padding: 0;
 
     & h2 {
-      padding: 1rem;
+      padding: var(--sp-4);
       margin: 0;
     }
 
@@ -20,16 +20,16 @@
 
         & th {
           text-align: left;
-          font-weight: 400;
-          padding: 0.5rem 1rem;
-          border-bottom: 1px solid var(--divider);
+          font-weight: var(--font-weight-bold);
+          padding: var(--padding-cell);
+          border-bottom: var(--border-divider);
 
           &:first-child {
-            border-top-left-radius: .5rem;
+            border-top-left-radius: var(--radius-sm);
           }
 
           &:last-child {
-            border-top-right-radius: .5rem;
+            border-top-right-radius: var(--radius-sm);
           }
 
         }
@@ -40,11 +40,11 @@
         }
 
         & td {
-          padding: .5rem 1rem;
-          border-bottom: 1px solid var(--divider);
+          padding: var(--padding-cell);
+          border-bottom: var(--border-divider);
 
           & + & {
-            border-left: 1px solid var(--divider);
+            border-left: var(--border-divider);
           }
         }
       }
