--- a/app/assets/stylesheets/rails_observatory/components/dropdown.css
+++ b/app/assets/stylesheets/rails_observatory/components/dropdown.css
@@ -6,17 +6,22 @@
     opacity: 0;
     visibility: hidden;
     transform: translate(0, -1rem);
-    transition: opacity .2s ease-in-out, visibility .2s ease-in-out, transform .2s ease-in-out;
+    transition: opacity var(--transition-quick), visibility var(--transition-quick), transform var(--transition-quick);
     list-style: none;
     margin: 0;
+    margin-top: var(--gap-sm);
     padding: 0;
     position: absolute;
     z-index: 100;
-    width: 100%;
+    min-width: max-content;
+    border: var(--border-divider);
+    border-radius: var(--radius-sm);
+    overflow: hidden;
+    box-shadow: var(--shadow-md);
 
     & > li {
 
-      border-bottom: 1px solid var(--divider);
+      border-bottom: var(--border-divider);
       text-align: left;
 
       &:last-child {
@@ -26,8 +31,8 @@
       & > a {
         color: var(--white);
         text-decoration: none;
-        font-weight: 200;
-        padding: .5rem .75rem;
+        font-weight: var(--font-weight-light);
+        padding: var(--padding-button);
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -37,7 +42,7 @@
         }
 
         &.active {
-          font-weight: 400;
+          font-weight: var(--font-weight-bold);
 
           & svg {
             display: block;
