--- a/app/assets/stylesheets/rails_observatory/components/query_table.css
+++ b/app/assets/stylesheets/rails_observatory/components/query_table.css
@@ -28,31 +28,31 @@
     right: 0;
     bottom: 0;
     transform: scaleX(0);
-    transition: all 250ms ease-out;
-    background-color: dodgerblue;
+    transition: all var(--transition-standard);
+    background-color: var(--accent);
   }
 
   ._resize-handle:hover::before {
-    background-color: dodgerblue;
+    background-color: var(--accent);
     transform-origin: center center;
     transform: scaleX(1);
   }
 
   ._column {
-    padding: .5rem 1rem;
-    border-bottom: 1px solid var(--divider);
+    padding: var(--padding-cell);
+    border-bottom: var(--border-divider);
     white-space: nowrap;
     overflow: hidden;
 
     & + & {
-      border-left: 1px solid var(--divider);
+      border-left: var(--border-divider);
     }
 
     &:first-child {
-      padding-left: 2rem;
+      padding-left: var(--sp-6);
     }
     &:last-child {
-      padding-right: 2rem;
+      padding-right: var(--sp-6);
     }
   }
 
@@ -77,7 +77,7 @@
   }
 
   .pagination {
-    margin-block: .5rem;
+    margin-block: var(--sp-2);
     grid-column: -1 / 1;
   }
 
