--- a/app/assets/stylesheets/rails_observatory/components/side_nav.css
+++ b/app/assets/stylesheets/rails_observatory/components/side_nav.css
@@ -1,11 +1,11 @@
 @scope (.side-nav) {
 
   :scope {
-    border-right: 1px solid var(--divider);
-    padding: 1rem;
+    border-right: var(--border-divider);
+    padding: var(--sp-4);
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: var(--gap-lg);
     align-items: stretch;
     background: rgb(0, 144, 255);
     background: radial-gradient(ellipse 100% 4rem at top, rgba(0, 144, 255, 0.4) 0%, rgba(22, 26, 29, 1) 100%);
@@ -23,13 +23,13 @@
   .redis-stats {
     align-self: center;
     color: var(--black-secondary);
-    font-size: .85rem;
+    font-size: var(--font-size-xs);
 
   }
 
   .logo-with-text, .logo {
     align-self: start;
-    padding-inline: .75rem;
+    padding-inline: var(--sp-3);
     transition: all 500ms ease-in-out;
 
     &:hover {
@@ -56,17 +56,17 @@
     margin: 0;
     display: flex;
     flex-direction: column;
-    gap: .25rem;
+    gap: var(--gap-sm);
     flex-grow: 1;
 
     & a {
       display: flex;
       align-items: center;
-      padding: .5rem .75rem;
-      gap: .5rem;
-      border-radius: .5rem;
+      padding: var(--padding-button);
+      gap: var(--gap-md);
+      border-radius: var(--radius-sm);
       text-decoration: none;
-      font-weight: 400;
+      font-weight: var(--font-weight-bold);
       color: color-mix(in oklab, var(--black) 20%, white);
 
       &:is(:hover, :focus-visible) {
