--- a/app/assets/stylesheets/rails_observatory/components/tbd.css
+++ b/app/assets/stylesheets/rails_observatory/components/tbd.css
@@ -4,7 +4,7 @@
   margin: 0;
   display: flex;
   flex-direction: column;
-  gap: .25rem;
+  gap: var(--gap-sm);
   flex-grow: 1;
 
   .simple-list-title {
@@ -12,11 +12,11 @@
   }
 
   & li {
-    padding: 2rem;
+    padding: var(--padding-lg);
   }
 
   & li + li {
-    border-top: 1px solid var(--divider);
+    border-top: var(--border-divider);
   }
 
   & a {
@@ -33,13 +33,13 @@
   &:not([hidden]) {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: var(--gap-lg);
   }
 
   max-width: 120ch;
 
   .highlight {
-    border: 1px solid var(--divider);
+    border: var(--border-divider);
 
     .line {
       padding: 0 1rem;
