--- a/app/assets/stylesheets/rails_observatory/components/top_nav.css
+++ b/app/assets/stylesheets/rails_observatory/components/top_nav.css
@@ -1,13 +1,13 @@
 .top-nav {
   grid-area: top-nav;
-  border-bottom: 1px solid var(--divider);
-  padding: 1rem 2rem;
+  border-bottom: var(--border-divider);
+  padding: var(--sp-4) var(--padding-lg);
   display: flex;
   justify-content: space-between;
   align-items: center;
 
   ._subtitle {
-    font-weight: 200;
+    font-weight: var(--font-weight-light);
     color: var(--black-secondary);
   }
 
@@ -15,7 +15,7 @@
   & > span {
     display: flex;
     align-items: baseline;
-    gap: .5rem;
+    gap: var(--gap-md);
 
     & h1 {
       margin: 0;
@@ -25,9 +25,9 @@
 
   .status-success {
     /*color: #3ad23a;*/
-    background-color: #38a238;
-    padding: .25rem .5rem;
-    border-radius: .5rem;
-    font-size:1.25rem;
+    background-color: var(--success);
+    padding: var(--sp-1) var(--sp-2);
+    border-radius: var(--radius-sm);
+    font-size: var(--font-size-xl);
   }
 }
