--- a/app/assets/stylesheets/rails_observatory/elements/button.css
+++ b/app/assets/stylesheets/rails_observatory/elements/button.css
@@ -1,16 +1,16 @@
 button {
   font-family: inherit;
   display: flex;
-  font-size: 1rem;
+  font-size: var(--font-size-md);
   align-items: center;
-  padding: .5rem .75rem;
-  border-radius: .5rem;
-  gap: .5rem;
-  font-weight: 400;
+  padding: var(--padding-button);
+  border-radius: var(--radius-sm);
+  gap: var(--gap-md);
+  font-weight: var(--font-weight-bold);
 
   &.secondary {
     background-color: transparent;
-    border: 1px solid var(--divider);
+    border: var(--border-divider);
     color: var(--white);
 
     &:hover, &:focus-within {
