--- a/app/assets/stylesheets/rails_observatory/elements/section.css
+++ b/app/assets/stylesheets/rails_observatory/elements/section.css
@@ -1,19 +1,20 @@
 section {
   header {
-    border-bottom: 1px solid var(--divider);
-    padding: 2rem;
-    gap: 1rem;
+    border-bottom: var(--border-divider);
+    padding: var(--padding-lg);
+    gap: var(--sp-5);
     display: flex;
     flex-direction: column;
 
     h2 {
-      font-size: 1.5rem;
-      font-weight: 400;
+      font-size: var(--font-size-lg);
+      font-weight: var(--font-weight-bold);
       margin: 0;
     }
 
     &:has(h2 + *) h2 {
-      padding-bottom: 1rem;
+      padding-bottom: var(--sp-4);
+      padding-bottom: 0;
     }
   }
 }
