--- a/app/assets/stylesheets/rails_observatory/errors/show/details.css
+++ b/app/assets/stylesheets/rails_observatory/errors/show/details.css
@@ -1,13 +1,13 @@
 .errors\/show\/details {
   grid-area: details;
-  margin: 1rem;
+  margin: var(--sp-4);
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: var(--gap-lg);
 
   & > h2 {
-    margin-block: 1rem;
-    padding-left: 1rem;
-    font-size: 1.25rem;
+    margin-block: var(--sp-4);
+    padding-left: var(--sp-4);
+    font-size: var(--font-size-xl);
   }
 }
