--- a/app/assets/stylesheets/rails_observatory/layout/two-column.css
+++ b/app/assets/stylesheets/rails_observatory/layout/two-column.css
@@ -3,11 +3,11 @@
     display: grid;
     grid-template-columns: minmax(0,1fr) 300px;
     grid-template-areas: 'main side-panel';
-    gap: 2rem;
+    gap: var(--gap-xl);
 
     & > .layout-two-column-main {
       grid-area: main;
-      padding: 1rem;
+      padding: var(--sp-4);
     }
 
     & > .layout-two-column-side-panel {
