--- a/app/assets/stylesheets/rails_observatory/mixins/nav_button.css
+++ b/app/assets/stylesheets/rails_observatory/mixins/nav_button.css
@@ -5,11 +5,11 @@
   .mixin-nav-button {
     display: flex;
     align-items: center;
-    padding: .5rem .75rem;
-    gap: .5rem;
-    border-radius: .5rem;
+    padding: var(--padding-button);
+    gap: var(--gap-md);
+    border-radius: var(--radius-sm);
     text-decoration: none;
-    font-weight: 400;
+    font-weight: var(--font-weight-bold);
     color: color-mix(in oklab, var(--black) 20%, white);
 
     &:is(:hover, :focus-visible) {
