--- a/app/assets/stylesheets/rails_observatory/components/side_nav.css
+++ b/app/assets/stylesheets/rails_observatory/components/side_nav.css
@@ -24,7 +24,16 @@
     align-self: center;
     color: var(--black-secondary);
     font-size: var(--font-size-xs);
+    text-align: center;
 
+    & a {
+      color: inherit;
+      text-decoration: none;
+
+      &:hover {
+        color: var(--white);
+      }
+    }
   }
 
   .logo-with-text, .logo {
