Refactor errors controller to use new time series query API
- Use query_value and query_range instead of deprecated methods
- Add time slice layout for consistent time range handling
- Properly wrap views in main/layout elements
- Add controller tests for index and show actions

--- a/app/views/rails_observatory/errors/index.html.erb
+++ b/app/views/rails_observatory/errors/index.html.erb
@@ -1,7 +1,7 @@
 <% content_for(:title, 'Errors') %>
 <% content_for(:hide_duration, 'true') %>
 
-
+<main>
 <style>
   @scope {
     :scope {
@@ -85,3 +85,4 @@
     <div class="_count"><%= @count_by_fingerprint[e.fingerprint] %><%# e.count %></div>
   </div>
 <% end %>
+</main>
