--- a/app/views/rails_observatory/errors/show.html.erb
+++ b/app/views/rails_observatory/errors/show.html.erb
@@ -125,6 +125,7 @@
   }
 </style>
 
+<main class="layout-two-column">
 <div class="layout-two-column-side-panel side-panel">
   <dl>
     <dt>Occurrences</dt>
@@ -191,3 +192,4 @@
 
 
 </div>
+</main>
